--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(game)
+project(index)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -15,6 +15,7 @@ include_directories(include)
 
 if(EMSCRIPTEN)
     include_directories(${EMSCRIPTEN_ROOT_PATH}/upstream/emscripten/system/include/emscripten)
+    include_directories(${EMSDK}/upstream/emscripten/system/include/emscripten)
     include_directories($ENV{EMSDK}/upstream/emscripten/cache/sysroot/include)
 endif()
 
@@ -23,18 +24,25 @@ file(GLOB SOURCES src/*.cpp)
 set(CMAKE_BINARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build")
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build")
 
-add_executable(game ${SOURCES})
+add_executable(index ${SOURCES})
 
 if(EMSCRIPTEN)
-    set(RAYLIB_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/libraylibwebmac.a")
+    if (APPLE)
+        set(RAYLIB_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/libraylibwebmac.a")
+    elseif (Win32)
+        set(RAYLIB_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/libraylibweb.a")
+    else()
+        set(RAYLIB_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/libraylibweb.a")
+    endif()
+
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s USE_GLFW=3 -s ASSERTIONS=1 -s WASM=1 -s ASYNCIFY -s FORCE_FILESYSTEM=1 -s NO_DISABLE_EXCEPTION_CATCHING")
-    target_compile_definitions(game PRIVATE ${PLATFORM_WEB})
+    target_compile_definitions(index PRIVATE ${PLATFORM_WEB})
 else()
     set(RAYLIB_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/libraylib.a")
 endif()
 
-target_link_libraries(game ${RAYLIB_LIBRARY} -lwebsocket.js)
+target_link_libraries(index ${RAYLIB_LIBRARY} -lwebsocket.js)
 
 if(NOT EMSCRIPTEN)
-    target_link_libraries(game -lwinmm -lgdi32 -lopengl32)
+    target_link_libraries(index -lwinmm -lgdi32 -lopengl32)
 endif()
