--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -15,8 +15,9 @@ endif()
 include_directories(include)
 include_directories(include/stage)
 include_directories(include/player)
+include_directories(include/raylib)
 
-if
+
 if(EMSCRIPTEN)
     include_directories(${EMSCRIPTEN_ROOT_PATH}/upstream/emscripten/system/include/emscripten)
     include_directories(${EMSDK}/upstream/emscripten/system/include/emscripten)
@@ -26,8 +27,7 @@ endif()
 file(GLOB SOURCES
     "src/*.cpp"
     "src/stage/*.cpp"
-    "src/player/*.cpp"
-)
+    "src/player/*.cpp")
 
 set(CMAKE_BINARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build")
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build")
