--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -9,7 +9,8 @@ set(BOOST_LIBRARYDIR "/home/ditz/boost/stage/lib")
 find_package(Boost REQUIRED COMPONENTS system)
 find_package(Threads)
 
-include_directories(include ${Boost_INCLUDE_DIRS})
+include_directories(inc ${Boost_INCLUDE_DIRS})
+include_directories(inc/)
 
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.c" "src/*.cc")
 
@@ -17,12 +18,11 @@ file(GLOB_RECURSE HEADERS "inc/*.h" "inc/*.hpp" "inc/*.hh")
 
 add_executable(program ${SOURCES} ${HEADERS})
 
-target_link_libraries(program ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(program ${Boost_LIBRARIES} ${RAYLIB_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_custom_target(clean_build
     COMMAND ${CMAKE_COMMAND} -E remove_directory ${CMAKE_BINARY_DIR}/CMakeFiles
