--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -7,8 +7,8 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     set(BOOST_ROOT "/Users/daniel/boost")
     set(BOOST_LIBRARYDIR "/Users/daniel/boost/stage/lib")
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    set(BOOST_ROOT "/home/daniel/boost")
-    set(BOOST_LIBRARYDIR "/home/daniel/boost/stage/lib")
+    set(BOOST_ROOT "/home/ditz/boost")
+    set(BOOST_LIBRARYDIR "/home/ditz/boost/stage/lib")
 endif()
 
 find_package(Boost REQUIRED COMPONENTS system)
